--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+
 <ul dir="auto">
 <li>
 <p dir="auto">🔭 某厂架构师</p>
@@ -15,3 +23,6 @@
 <p dir="auto">💬 <a href="https://yjava.cn/imgs/dearlocation.jpeg" rel="nofollow">微信</a></p>
 </li>
 </ul>
+ 
+</body>
+</html>
